# rag-eval-public-domain-books

./: .gitignore  LICENSE  README.md
corpus_specs/: early_american.yaml  early_scifi.yaml  gothic_fiction.yaml  industrial_age_technical.yaml  philosophy_19c.yaml  scientific_illustration.yaml  shakespeare.yaml  victorian_detective.yaml
early_american/: corpus.yaml  metadata.json
early_scifi/: corpus.yaml  metadata.json
gothic_fiction/: corpus.yaml  metadata.json
industrial_age_technical/: corpus.yaml  metadata.json
philosophy_19c/: corpus.yaml  metadata.json
scientific_illustration/: corpus.yaml  metadata.json
scripts/: .env.example  Makefile  build_archive.py  build_gutenberg.py  download_books.py  pyproject.toml
shakespeare/: corpus.yaml  metadata.json
victorian_detective/: corpus.yaml  metadata.json
